--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     
     <button id="themeToggle">Переключить тему</button>
     <button id="scanQRBtn">📷 Сканировать QR</button>
+    <a href="generator/" class="qr-generator-btn">🔧 Генератор QR</a>
     <button id="addRowBtn" style="display:none;">➕ Добавить упражнение</button>
 
     <!-- Контейнер для сканера QR -->
