--- a/index.html
+++ b/index.html
@@ -4,140 +4,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sportnote</title>
-  <link rel="stylesheet" href="css/styles.css" />
   <style>
     body {
-      background-color: #121a12;
-      color: #a1d99b;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 20px;
-    }
-    .logo {
-      font-size: 2rem;
-      font-weight: 700;
-      color: #7fff00;
-      text-shadow: 0 0 5px #4caf50;
-      margin-bottom: 10px;
-    }
-    .logo-sub {
-      font-size: 0.9rem;
-      color: #4caf50;
-      margin-top: -6px;
-      margin-left: 4px;
-    }
-    .workout-counter {
-      margin-bottom: 10px;
-      font-weight: 600;
-      font-size: 1.1rem;
+      background: #0b1a0f;
+      color: #a6dba0;
+      font-family: Arial, sans-serif;
+      padding: 20px;
     }
     button {
-      background-color: #2e7d32;
+      background: #0b3a0f;
+      color: #a6dba0;
       border: none;
-      color: #c8facc;
-      padding: 10px 18px;
-      font-size: 16px;
-      border-radius: 6px;
+      padding: 10px 15px;
+      margin: 5px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
-      margin-right: 10px;
-      margin-bottom: 10px;
+      border-radius: 4px;
     }
-    button:hover {
-      background-color: #4caf50;
-    }
-    .container {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-    .notes-section, .human-section {
-      background-color: #203420;
-      border-radius: 10px;
-      padding: 15px;
-      flex: 1 1 400px;
-      box-shadow: 0 0 10px #4caf50;
-    }
-    .exercise-input {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 8px;
-    }
-    input[type="text"] {
-      flex: 1;
-      padding: 8px;
-      border-radius: 6px;
-      border: 1px solid #4caf50;
-      background-color: #121a12;
-      color: #c8facc;
-      font-size: 16px;
-      outline: none;
+    #scannerContainer {
+      margin-top: 20px;
+      display: none;
     }
     #preview {
       width: 100%;
       max-width: 400px;
-      border-radius: 10px;
-      margin-top: 10px;
-      display: none;
-      box-shadow: 0 0 10px #4caf50;
-    }
-    .status-text {
-      font-weight: 600;
-      font-size: 1.2rem;
-      color: #a1d99b;
-      margin-top: 15px;
-    }
-    .success-message {
-      background-color: #2e7d32;
-      border-radius: 10px;
-      padding: 20px;
-      margin-top: 20px;
-      color: #c8facc;
-      font-weight: 700;
-      font-size: 1.3rem;
-      text-align: center;
-      box-shadow: 0 0 10px #4caf50;
-      display: none;
+      border-radius: 8px;
+      box-shadow: 0 0 10px #1f3f1f;
     }
   </style>
 </head>
 <body>
 
-  <div class="logo">
-    Sport Note
-    <div class="logo-sub">SPORTWITHNOTE</div>
-  </div>
-  
-  <div class="workout-counter" id="workoutCounter">
-    Тренировок сохранено: 0
-  </div>
-  
-  <button id="themeToggle">Переключить тему</button>
+  <h1>Sportnote</h1>
   <button id="scanQRBtn">📷 Сканировать QR</button>
-  <button id="qrGeneratorBtn">🖊 Генератор QR</button>
-  <a href="generator/index.html" target="_blank">Открыть генератор QR (тест)</a>
+  <button id="stopScanBtn" style="display:none;">⏹ Выключить скан</button>
 
-  <button id="addRowBtn" style="display:none;">➕ Добавить упражнение</button>
-  
-  <div class="container">
-    <div class="notes-section">
-      <div id="textBoxes"></div>
-      <button id="saveBtn">🏋️ Сохранить тренировку</button>
-    </div>
-    
-    <div class="human-section">
-      <div class="human" id="humanFigure"></div>
-      <div class="status-text" id="statusText">Не выполнено</div>
-    </div>
-  </div>
-
-  <video id="preview" autoplay></video>
-
-  <div class="success-message" id="successMessage">
-    Ты молодец!<br>Тренировка прошла хорошо!
+  <div id="scannerContainer">
+    <video id="preview"></video>
   </div>
 
   <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
   <script src="js/app.js"></script>
-  
 </body>
 </html>
