--- a/generator/index.html
+++ b/generator/index.html
@@ -4,126 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Генератор QR для SportNote</title>
-  <style>
-    body {
-      background-color: #121a12;
-      color: #a1d99b;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 20px;
-    }
-    h1 {
-      color: #7fff00;
-      text-shadow: 0 0 5px #4caf50;
-    }
-    #exerciseContainer {
-      margin-bottom: 15px;
-    }
-    .exercise-input {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 10px;
-    }
-    input[type="text"] {
-      flex: 1;
-      padding: 8px;
-      border-radius: 6px;
-      border: 1px solid #4caf50;
-      background-color: #203420;
-      color: #c8facc;
-      font-size: 16px;
-      outline: none;
-    }
-    button {
-      background-color: #2e7d32;
-      border: none;
-      color: #c8facc;
-      padding: 10px 18px;
-      font-size: 16px;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-    button:hover {
-      background-color: #4caf50;
-    }
-    #qrCode {
-      margin-top: 20px;
-      background: #203420;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px #4caf50;
-      display: inline-block;
-    }
-  </style>
+  <link rel="stylesheet" href="../css/styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
 </head>
 <body>
   <h1>Генератор QR для SportNote</h1>
-  
+  <button onclick="window.location.href='../index.html'">🏋️ Тренировка</button>
   <div id="exerciseContainer">
     <div class="exercise-input">
-      <input type="text" placeholder="Название упражнения" class="exercise-name" />
-      <input type="text" placeholder="Значение (опционально)" class="exercise-value" />
-      <button id="addExerciseBtn">+</button>
+      <input type="text" placeholder="Название упражнения" class="exercise-name">
+      <input type="text" placeholder="Значение (опционально)" class="exercise-value">
+      <button onclick="addExercise()">+</button>
     </div>
   </div>
-  
-  <button id="generateQRBtn">Сгенерировать QR</button>
-  <button id="toWorkoutBtn" style="margin-left: 10px;">🏋️ Тренировка</button>
-  
+  <button onclick="generateQR()">Сгенерировать QR</button>
   <div id="qrCode"></div>
-  
-  <script>
-    const exerciseContainer = document.getElementById('exerciseContainer');
-    const addExerciseBtn = document.getElementById('addExerciseBtn');
-    const generateQRBtn = document.getElementById('generateQRBtn');
-    const qrCodeDiv = document.getElementById('qrCode');
-    const toWorkoutBtn = document.getElementById('toWorkoutBtn');
-
-    addExerciseBtn.addEventListener('click', () => {
-      const div = document.createElement('div');
-      div.className = 'exercise-input';
-      div.innerHTML = `
-        <input type="text" placeholder="Название упражнения" class="exercise-name" />
-        <input type="text" placeholder="Значение (опционально)" class="exercise-value" />
-        <button class="removeBtn">−</button>
-      `;
-      exerciseContainer.appendChild(div);
-
-      div.querySelector('.removeBtn').addEventListener('click', () => {
-        exerciseContainer.removeChild(div);
-      });
-    });
-
-    generateQRBtn.addEventListener('click', () => {
-      const exercises = [];
-      const names = document.querySelectorAll('.exercise-name');
-      const values = document.querySelectorAll('.exercise-value');
-      for(let i=0; i<names.length; i++){
-        const name = names[i].value.trim();
-        const value = values[i].value.trim();
-        if(name){
-          exercises.push({ name, value });
-        }
-      }
-      if(exercises.length === 0){
-        alert('Добавьте хотя бы одно упражнение');
-        return;
-      }
-      const dataJSON = JSON.stringify(exercises);
-      qrCodeDiv.innerHTML = '';
-      QRCode.toCanvas(dataJSON, { width: 200 }, function (error, canvas) {
-        if (error) {
-          alert('Ошибка генерации QR: ' + error);
-          return;
-        }
-        qrCodeDiv.appendChild(canvas);
-      });
-    });
-
-    toWorkoutBtn.addEventListener('click', () => {
-      window.location.href = '../index.html';
-    });
-  </script>
+  <script src="generator.js"></script>
 </body>
 </html>
