--- a/index.html
+++ b/index.html
@@ -4,52 +4,48 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sportnote</title>
-  <style>
-    body {
-      background: #0b1a0f;
-      color: #a6dba0;
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      text-align: center;
-    }
-    button {
-      background: #0b3a0f;
-      color: #a6dba0;
-      border: none;
-      padding: 10px 20px;
-      margin: 10px;
-      cursor: pointer;
-      border-radius: 6px;
-      font-size: 16px;
-    }
-    #scannerContainer {
-      margin-top: 20px;
-      display: none;
-    }
-    #preview {
-      width: 100%;
-      max-width: 400px;
-      border-radius: 10px;
-      box-shadow: 0 0 12px #1f3f1f;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css" />
+  <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 </head>
 <body>
-
-  <h1>Sportnote</h1>
-
-  <button id="scanQRBtn">📷 Сканировать QR</button>
-  <button id="stopScanBtn" style="display:none;">⏹ Выключить скан</button>
-  <br>
-  <a href="generator/index.html" target="_blank">
-    <button>🧩 Генератор QR</button>
-  </a>
-
-  <div id="scannerContainer">
-    <video id="preview"></video>
+  <div class="logo">
+    Sport Note
+    <div class="logo-sub">SPORTWITHNOTE</div>
   </div>
 
-  <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+  <div class="workout-counter" id="workoutCounter">
+    Тренировок сохранено: 0
+  </div>
+
+  <div class="buttons">
+    <button id="themeToggle">🎨 Переключить тему</button>
+    <button id="scanQRBtn">📷 Сканировать QR</button>
+    <button id="stopScanBtn" style="display:none;">⏹ Выключить скан</button>
+    <button id="addRowBtn">➕ Добавить упражнение</button>
+    <a href="generator/index.html" target="_blank">
+      <button>🧩 Генератор QR</button>
+    </a>
+  </div>
+
+  <div class="container">
+    <div class="notes-section">
+      <div id="textBoxes"></div>
+      <button id="saveBtn">🏋️ Сохранить тренировку</button>
+    </div>
+    <div class="human-section">
+      <div class="human" id="humanFigure"></div>
+      <div class="status-text" id="statusText">Не выполнено</div>
+    </div>
+  </div>
+
+  <div class="success-message" id="successMessage">
+    Ты молодец!<br>Тренировка прошла хорошо!
+  </div>
+
+  <div id="scannerContainer" style="display:none; margin-top: 20px;">
+    <video id="preview" style="width:100%; max-width: 400px; border-radius: 10px;"></video>
+  </div>
+
   <script src="js/app.js"></script>
 </body>
 </html>
