--- a/index.html
+++ b/index.html
@@ -1,51 +1,45 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sportnote</title>
-  <link rel="stylesheet" href="css/styles.css" />
-  <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sportnote</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-  <div class="logo">
-    Sport Note
-    <div class="logo-sub">SPORTWITHNOTE</div>
-  </div>
+<body class="dark-theme">
+    <div class="logo">Sport Note<div class="logo-sub">SPORTWITHNOTE</div></div>
+    <div class="workout-counter" id="workoutCounter">Тренировок сохранено: 0</div>
 
-  <div class="workout-counter" id="workoutCounter">
-    Тренировок сохранено: 0
-  </div>
-
-  <div class="buttons">
-    <button id="themeToggle">🎨 Переключить тему</button>
+    <button id="themeToggle">Переключить тему</button>
     <button id="scanQRBtn">📷 Сканировать QR</button>
-    <button id="stopScanBtn" style="display:none;">⏹ Выключить скан</button>
-    <button id="addRowBtn">➕ Добавить упражнение</button>
-    <a href="generator/index.html" target="_blank">
-      <button>🧩 Генератор QR</button>
-    </a>
-  </div>
+    <button id="stopQRBtn" style="display:none;">⛔ Остановить сканирование</button>
+    <button id="addRowBtn" style="display:none;">➕ Добавить упражнение</button>
+    <a href="generator/index.html" target="_blank" class="gen-link">🧾 Генератор QR</a>
 
-  <div class="container">
-    <div class="notes-section">
-      <div id="textBoxes"></div>
-      <button id="saveBtn">🏋️ Сохранить тренировку</button>
+    <div class="container">
+        <div class="notes-section">
+            <div id="textBoxes"></div>
+            <button id="saveBtn">🏋️ Сохранить тренировку</button>
+        </div>
+        <div class="human-section">
+            <div class="human" id="humanFigure"></div>
+            <div class="status-text" id="statusText">Не выполнено</div>
+        </div>
     </div>
-    <div class="human-section">
-      <div class="human" id="humanFigure"></div>
-      <div class="status-text" id="statusText">Не выполнено</div>
+
+    <div class="overlay" id="overlay"></div>
+    <div class="rename-dialog" id="renameDialog">
+        <h3>Переименовать упражнение</h3>
+        <input type="text" class="rename-input" id="renameInput">
+        <button id="confirmRename">Сохранить</button>
+        <button id="cancelRename">Отмена</button>
     </div>
-  </div>
 
-  <div class="success-message" id="successMessage">
-    Ты молодец!<br>Тренировка прошла хорошо!
-  </div>
+    <div class="success-message" id="successMessage">Ты молодец!<br>Тренировка прошла хорошо!</div>
 
-  <div id="scannerContainer" style="display:none; margin-top: 20px;">
-    <video id="preview" style="width:100%; max-width: 400px; border-radius: 10px;"></video>
-  </div>
+    <video id="preview" style="display:none;"></video>
 
-  <script src="js/app.js"></script>
+    <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
